# gpu-occupier

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/gpu_occupier/: __init__.py  occupy.py
tests/: test_occupy.py
