[metadata]
name = gpu-occupier
version = 0.1.0
description = A package for monitoring and occupying GPU resources.
author = Shu1L0n9
author_email = Shu1L0n9@gmail.com
license = MIT
url = https://github.com/Shu1L0n9/gpu-occupy
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    torch
    nvidia-smi

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gpu-occupier = gpu_occupy.occupy:main